--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,27 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <repositories>
-	  <repository>
-	    <id>spring-releases</id>
-	    <name>Spring Maven RELEASE Repository</name>
-	    <url>http://maven.springframework.org/release</url>
-	  </repository>
-	
-	  <repository>
-	    <id>spring-snapshots</id>
-	    <name>Spring Maven Snapshot Repository</name>
-	    <url>http://s3.amazonaws.com/maven.springframework.org/snapshot</url>
-	  </repository>
+    <repository>
+      <id>spring-releases</id>
+      <name>Spring Maven RELEASE Repository</name>
+      <url>https://repo.spring.io/release</url>
+    </repository>
+
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Maven Snapshot Repository</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    
+    <!-- Repositorio de Maven Central como respaldo -->
+    <repository>
+      <id>central</id>
+      <name>Maven Central</name>
+      <url>https://repo1.maven.org/maven2</url>
+    </repository>
   </repositories>
      
   <properties>
@@ -37,51 +47,58 @@
          <version>${spring.version}</version>
      </dependency>    
         
-	 <dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-tx</artifactId>
-		<version>${spring.version}</version>
-	 </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
            
-	 <dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-orm</artifactId>
-		<version>${spring.version}</version>
-	 </dependency>
-	 
-	 <dependency>
-		<groupId>org.springframework.batch</groupId>
-		<artifactId>spring-batch-core</artifactId>
-		<version>${spring-batch.version}</version>
-	 </dependency>
-	 	 
-	 <!-- Hibernate dependencies -->
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${spring.version}</version>
+        <exclusions>
+          <!-- Excluir dependencias problemáticas de Eclipse Persistence -->
+          <exclusion>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.core</artifactId>
+          </exclusion>
+        </exclusions>
+     </dependency>
+     
+     <dependency>
+        <groupId>org.springframework.batch</groupId>
+        <artifactId>spring-batch-core</artifactId>
+        <version>${spring-batch.version}</version>
+     </dependency>
+         
+     <!-- Hibernate dependencies -->
      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
         <version>4.1.8.Final</version>
      </dependency>
-	 
-	  <!-- Tomcat DBCP -->
-	 <dependency>
-		<groupId>org.apache.tomcat</groupId>
-		<artifactId>tomcat-jdbc</artifactId>
-		<version>7.0.27</version>
-	 </dependency>
-	 
-	 <!-- MySQL Java Connector library -->
-	 <dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.17</version>
-	 </dependency>
-	 
-	 <!-- Log4j library -->
-	 <dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.16</version>
-	 </dependency>
+     
+      <!-- Tomcat DBCP -->
+     <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jdbc</artifactId>
+        <version>7.0.27</version>
+     </dependency>
+     
+     <!-- MySQL Java Connector library -->
+     <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.17</version>
+     </dependency>
+     
+     <!-- Log4j library -->
+     <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.16</version>
+     </dependency>
   
   </dependencies>
   
@@ -89,46 +106,46 @@
     <sourceDirectory>src</sourceDirectory>
     <plugins>
     
-    	<plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-compiler-plugin</artifactId>
-	        <version>3.0</version>
-	        <configuration>
-	          <source>1.7</source>
-	          <target>1.7</target>
-	        </configuration>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.0</version>
+            <configuration>
+              <source>1.7</source>
+              <target>1.7</target>
+            </configuration>
         </plugin>
     
-	    <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-shade-plugin</artifactId>
-			<version>2.0</version>
-	
-			<executions>
-				<execution>
-					<phase>package</phase>
-					<goals>
-						<goal>shade</goal>
-					</goals>
-					<configuration>
-						<transformers>
-							<transformer
-								implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-								<mainClass>com.onlinetechvision.exe.Application</mainClass>
-							</transformer>
-							<transformer
-								implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-								<resource>META-INF/spring.handlers</resource>
-							</transformer>
-							<transformer
-								implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-								<resource>META-INF/spring.schemas</resource>
-							</transformer>
-						</transformers>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.0</version>
+    
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>com.onlinetechvision.exe.Application</mainClass>
+                            </transformer>
+                            <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                <resource>META-INF/spring.handlers</resource>
+                            </transformer>
+                            <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                <resource>META-INF/spring.schemas</resource>
+                            </transformer>
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
