--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,8 @@ jobs:
       - name: Download dependencies
         run: |
           mvn clean
-          mvn -B dependency:go-offline -U
+          mvn -B dependency
+          # :go-offline -U
 
   run:
     needs: prepare
